# detectron-master

./: .env  .gitignore  README.md  main.py  params.json  pyproject.toml
notebooks/: binary_adapter_inspection.ipynb
src/coro_dt/: config.py
src/coro_dt/augmentation/: frame.py
src/coro_dt/cli/: sample_binary.py  sample_multi.py  train_binary.py  train_multi.py
src/coro_dt/data/: adapter.py  binary_adapter.py  converter.py  converters.py  metrics.py
src/coro_dt/training/binary/: hooks.py  trainer.py
src/coro_dt/training/multi/: hooks.py  mappers.py  trainer.py
